--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,29 +1,37 @@
 name: Playwright Tests
+
 on:
   push:
     branches: [ master ]
   pull_request:
-    branches: [  master ]
+    branches: [ master ]
+
 jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python
+
+    - name: Setup Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.11'
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+
     - name: Ensure browsers are installed
       run: python -m playwright install --with-deps
-    - name: Run your tests
-      run: pytest --tracing=retain-on-failure
+
+    - name: Run Playwright Tests with Pytest
+      run: |
+        pytest --tracing=retain-on-failure --html=test-results/report.html --self-contained-html
+
     - uses: actions/upload-artifact@v4
-      if: ${{ !cancelled() }}
+      if: always()
       with:
         name: playwright-traces
         path: test-results/
