--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -8,8 +8,8 @@ on:
 
 jobs:
   test:
-    timeout-minutes: 60
     runs-on: ubuntu-latest
+
     steps:
     - uses: actions/checkout@v4
 
@@ -21,17 +21,16 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install pytest pytest-playwright
 
-    - name: Ensure browsers are installed
+    - name: Install Playwright Browsers
       run: python -m playwright install --with-deps
 
-    - name: Run Playwright Tests with Pytest
-      run: |
-        pytest --tracing=retain-on-failure --html=test-results/report.html --self-contained-html
+    - name: Run Playwright Tests
+      run: pytest --tracing=retain-on-failure --html=test-results/report.html --self-contained-html
 
-    - uses: actions/upload-artifact@v4
-      if: always()
+    - name: Upload Test Results
+      uses: actions/upload-artifact@v4
       with:
-        name: playwright-traces
+        name: test-results
         path: test-results/
