--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest pytest-playwright
+        pip install pytest pytest-playwright pytest-html
 
     - name: Install Playwright Browsers
       run: python -m playwright install --with-deps
