--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,36 +1,27 @@
 name: Playwright Tests
-
 on:
   push:
-    branches: [ master ]
+    branches: [ main, master ]
   pull_request:
-    branches: [ master ]
-
+    branches: [ main, master ]
 jobs:
   test:
+    timeout-minutes: 60
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
-
-    - name: Setup Python
-      uses: actions/setup-python@v4
+    - uses: actions/setup-node@v4
       with:
-        python-version: '3.11'
-
+        node-version: lts/*
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pytest pytest-playwright pytest-html
-
+      run: npm ci
     - name: Install Playwright Browsers
-      run: python -m playwright install --with-deps
-
-    - name: Run Playwright Tests
-      run: pytest --tracing=retain-on-failure --html=test-results/report.html --self-contained-html
-
-    - name: Upload Test Results
-      uses: actions/upload-artifact@v4
+      run: npx playwright install --with-deps
+    - name: Run Playwright tests
+      run: npx playwright test
+    - uses: actions/upload-artifact@v4
+      if: ${{ !cancelled() }}
       with:
-        name: test-results
-        path: test-results/
+        name: playwright-report
+        path: playwright-report/
+        retention-days: 30
